# vishwakarma

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  pyproject.toml  requirements.txt
k8s/: deployment.example.yaml  iam-cost-report-policy.json  rbac.example.yaml
lambda/: handler.py
vishwakarma/: __init__.py  cli.py  config.py  interactive.py  server.py
vishwakarma/bot/: cloudwatch.py  pdf.py  slack.py
vishwakarma/core/: compaction.py  engine.py  fast_rca.py  issue.py  learnings.py  llm.py  models.py  prompt.py  safeguards.py  tools.py  toolset_manager.py
vishwakarma/plugins/agents/: agents.json
vishwakarma/plugins/channels/alertmanager/: plugin.py
vishwakarma/plugins/channels/github/: plugin.py
vishwakarma/plugins/channels/jira/: plugin.py
vishwakarma/plugins/channels/opsgenie/: plugin.py
vishwakarma/plugins/channels/pagerduty/: plugin.py
vishwakarma/plugins/relays/pagerduty/: plugin.py
vishwakarma/plugins/relays/slack/: plugin.py
vishwakarma/plugins/runbooks/: database-investigation.md
vishwakarma/plugins/runbooks/aws/: alb-5xx-investigation.md  rds-investigation.md  rds-replication-lag.md  (+1 more)
vishwakarma/plugins/toolsets/: aks.yaml  argocd.yaml  aws.yaml  cilium.yaml  docker.yaml  helm.yaml  kafka.py  kubernetes.yaml  kubernetes_logs.yaml  todo.py
vishwakarma/scheduler/: cost_report.py
vishwakarma/storage/: db.py  evidence.py  patterns.py  queries.py
vishwakarma/ui/: routes.py
vishwakarma/ui/static/: index.html
vishwakarma/utils/: cache.py  cert_utils.py  colors.py  log.py  slack_format.py  stream.py
(+19 files in other folders)
